feat: create auth middleware and add route protection
